# MLOps_lab_01

./: LICENSE  README.md  app.py  inference.py  main.py  pyproject.toml  pytest.ini  settings.py  trained_model.joblib  training.py
config/: .env.dev  .env.prod  .env.test
tests/: settings_test.py  tests_endpoints.py
